src/main/webapp/css/tatami.css
/* ... */
.noRadius
{
    border-radius: 0px;
}

.noCollapse
{
    border-collapse: separate;
}

.noBorder{
    border-top : 0;
}

.noRadius {
    border-radius: 0px;
}


#basicMap {
    width: 100%;
    height: 100%;
    margin: 0;
}

#geolocMapPreview {
    width: 100%;
    height: 100%;
    margin: 0;
}

.alertColor{
    padding: 8px 15px 8px 14px;
    margin-bottom: 20px;
    color: #c09853;
    background-color: #fcf8e3;
    border: 1px solid #fbeed5;
    border-radius: 4px;
}
@media screen and (min-width: 767px) {
    #tatamiBody {
        padding: 10px 15px 10px 0px;
    }
}

body {
    background-image: url(/img/wallpaper.jpg);
}

h4 {
    font-size: inherit;
}

.well {
    box-shadow: none;
    border-radius: 5px;
}

.well h4 {
    margin: 0px;
}

.labelSizeNormal{
    font-size: 100%;
}

.tabMenu{
    margin-bottom: 15px;
    margin-top: 10px;
}

.navbar {
    background-color: black;
}
.controle-group
{
  padding: 0px 0px 5px;
    padding-top: 10px;
    }
.quota {
    color: #333333;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
;
}

.nomargin {
      margin: 0px;
}

.file-table
{
display: block;
}

.displayBlock
{
    display: block;
}

.fileItem
{
    width: 100%;
    display: inline-table;
    border-top: 1px solid #dddddd;
    padding: 8px;
}


div.jGrowl-notification{
    background-color : none;
    opacity : 1;
}

.little-marge-right{
    margin-right: 20px
}

.mediumHeight{
    height: 13px;
}

.smallPaddingLeft {
    padding-left: 10px;
}

.little-height{
    height: 10px;
}

.littleMargeBot{
    margin-bottom: 10px;
}

.little-padding-top{
    padding-top: 3px;
}
.little-marge-top{
    margin-top: 5px;
}

.little-padding
{
    padding: 0.10em 0.6em;
}
#updateAvatar{
    position: relative;
    cursor: hand;
    cursor: pointer;
}

#updateAvatar input[type=file] {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    height: 210px;
    width: 550px;

}


.avatar-float-left-container  {
    margin-left: 15px;
    margin-top: 15px;
    margin-bottom: 0px;
    margin-right: 15px;
}

.navbar .nav > li > a {
    color: #CCCCCC;
}

.navbar .nav > li > a:hover {
    color: white;
}

.navbar .nav li.dropdown > .dropdown-toggle .caret {
    border-top-color: #CCCCCC; 
    border-bottom-color: #CCCCCC; 
}

.navbar .nav li.dropdown > .dropdown-toggle .caret:hover {
    border-top-color: white; 
    border-bottom-color: white;
}

.navbar .nav li.dropdown.open > .dropdown-toggle {
    color: white;
    background-color: inherit;
}

.img {
    width: 50px;
    height: 50px;
    display: inline-block;
}

.img-small {
    width: 25px;
    height: 25px;
    background-position: center center;
    background-size: cover;
    -ms-behavior: url(/css/vendor/backgroundsize.min.htc);
}

.img-reply {
    width: 35px;
    height: 35px;
    margin-left: 10px;
    background-position: center center;
    background-size: cover;
    -ms-behavior: url(/css/vendor/backgroundsize.min.htc);
}

.img-medium {
    width: 50px;
    height: 50px;
    background-position: center center;
    background-size: cover;
    -ms-behavior: url(/css/vendor/backgroundsize.min.htc);
}

.img-big {
    width: 70px;
    height: 70px;
    background-position: center center;
    background-size: cover;
    -ms-behavior: url(/css/vendor/backgroundsize.min.htc);
}

.navbar-edit {
    line-height: 14px;
    left: 10px;
    width: 48px;
    padding: 4px 13px 3px;
    background-color: #428bca;
}

.navbar-edit:hover,
.navbar-edit:focus {
    background-color: #ddd;
}

.page-header {
    margin-top: 0px;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.img-rounded {
    /*border-radius: 15px;*/
}

.navbar .btn-navbar.fix-navbar {
    height: 14px;
    padding-top: 6px;
    line-height: 14px;
    font-size: 12px;
}

.tatam *, .trends *, .profile *, .preview-tatam *, .profile-card, .wrap * {
    /* white-space: normal; */
    word-wrap: break-word;
}


.status-actions {
    margin-left: -60px;
}

.status-action {
    padding: 0;
    margin: 0;
}

.status-action:hover {
    text-decoration: none;
}

.profile-card > .img {
    margin-right: 5px;
}

/*.tatam, .useritem {*/
.useritem {
    padding: 0px 5px 0px 0px;
    overflow: hidden;
    display: none;
    border: 1px solid #CCCCCC;
    background-color: white;
    margin-bottom: -1px;
}
.desactivated {
    /* Fallback for web browsers that don't support RGBa */
    background-color: rgb(255,64,64);
    /* RGBa with 0.6 opacity */
    background-color: rgba(241, 241, 241, 0.65) !important;
}
.useritemmini {
    padding: 0px 5px 1px 35px;
    overflow: hidden;
    display: none;
}

.user-profile {
    margin:0px;
    color:#252525;
}

.useritemmini h6 {
    margin-top: 5px;
    margin-bottom: 5px;
    line-height: 12px
}

.useritem, .useritemmini {
    display: block;
    padding: 5px;
}

.mention-share {
    font-size: 80%;
    color: #888888;
}

.tatam.favorite {
    background-image: url(img/favorite.png);
    background-repeat: no-repeat;
    background-position: right top;
}

.favorite {
    background-image: url(img/favorite.png);
    background-repeat: no-repeat;
    background-position: right top;
}

.tatam.share {
    background-image: url(img/shared.png);
    background-repeat: no-repeat;
    background-position: right top;
}

.share {
    background-image: url(img/shared.png);
    background-repeat: no-repeat;
    background-position: right top;
}

.tatam.both {
    background-image: url(img/both.png);
    background-repeat: no-repeat;
    background-position: right top;
}

.both {
    background-image: url(img/both.png);
    background-repeat: no-repeat;
    background-position: right top;
}

.pointer {
    cursor: pointer;
}

.tatam > div:first-child, .useritem > div:first-child {
    /*margin-left: -60px;*/
    padding: 5px;
}

.useritemmini > div:first-child {
    margin-left: -35px;
    padding: 5px;
}

.tatam > header {
    padding-bottom: 0;
    margin-bottom: 0px;
}

.tatams {
    /*margin-bottom: 15px;*/
}
/* ... */

